some changes made

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -43,7 +43,7 @@
   
     <h1 class="text-center">Our Menu</h1>
     <div class="container main-content">
-    <section class="col-xs-12">
+    <section class="col-xs-12 col-sm-12 col-md-12">
       <h2 class="text-center" >Chicken</h2>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam vestibulum nunc, sit amet tristique nibh placerat sit amet. Curabitur rhoncus neque odio, vel lacinia elit gravida a. Nunc at lacinia nibh. Nunc justo lectus, rutrum vitae ex id, efficitur rhoncus ex. Nam dignissim felis elementum lobortis mollis. Sed auctor justo sed odio interdum, id convallis lectus egestas. Duis blandit pretium est non euismod. Nam quis tincidunt mauris.
 
